--- a/kotlin-querydsl/src/main/resources/application.yml
+++ b/kotlin-querydsl/src/main/resources/application.yml
@@ -1,4 +1,14 @@
 spring:
   application:
     name: kotlin-querydsl
-
+  datasource:
+    url: jdbc:mysql://peterica.iptime.org:3308/playground
+    username: root
+    password: strong-password
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
