--- a/kotlin-querydsl/src/main/resources/application.yml
+++ b/kotlin-querydsl/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     password: strong-password
   jpa:
     hibernate:
-      ddl-auto: create-drop
+#      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
